--- a/springDemo/pom.xml
+++ b/springDemo/pom.xml
@@ -17,6 +17,13 @@
         <java.version>17</java.version>
     </properties>
     <dependencies>
+        <!--lombok依赖-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
+            <scope>provided</scope>
+        </dependency>
         <!-- sftp支持 -->
         <dependency>
             <groupId>com.jcraft</groupId>
